MainModel.java: replace com.google.common.collect.ImmutableList with the regular list module-info.java: new pom.xml: added maven-compiler-plugin